Unnecessary files deleted

--- a/To-Do/index.html
+++ b/To-Do/index.html
@@ -58,6 +58,6 @@
       </form>
     </footer>
     <script src="assets/MyAssets/app.js"></script>
-    <script src="assets/Bootstrap/js/bootstrap.js"></script>
+    <script src="assets/Bootstrap/js/bootstrap.bundle.js"></script>
   </body>
 </html>
