--- a/To-Do/index.html
+++ b/To-Do/index.html
@@ -18,10 +18,13 @@
   <body class="mx-auto">
     <header>
       <section class="todo-header">
-        <h1 class="todo-title">TODO <button class="float-end me-5" onclick="clearTaskList()">clear</button></h1>
+        <h1 class="todo-title">TODO</h1>
         <div class="todo-button-group d-flex justify-content-end">
+          <button class="todo-clear-all" onclick="clearTaskList()">
+            <i class="fa-solid fa-xmark"></i>
+          </button>
           <button class="todo-add-icon" onclick="showAddContainer()">
-            <img src="assets/Images/Add/add.png" alt="" />
+            <i class="fa-solid fa-plus"></i>
           </button>
         </div>
       </section>
