--- a/To-Do/index.html
+++ b/To-Do/index.html
@@ -15,56 +15,48 @@
       rel="stylesheet"
     />
   </head>
-  <body class="mx-auto">
-    <header>
-      <section class="todo-header">
+  <body>
+    <div class="app-container mx-auto">
+      <div class="" id="add-background" onclick="toggleAddContainer()"></div>
+      <section class="todo-header" id="todo-header">
         <h1 class="todo-title">TODO</h1>
         <div class="todo-button-group d-flex justify-content-end">
           <button class="todo-clear-all" onclick="clearTaskList()">
             <i class="fa-solid fa-xmark"></i>
           </button>
-          <button class="todo-add-icon" onclick="showAddContainer()">
+          <button class="todo-add-icon" onclick="toggleAddContainer()">
             <i class="fa-solid fa-plus"></i>
           </button>
         </div>
       </section>
-    </header>
-    <main>
-      <ul class="todo-record-list" id="todo-list"></ul>
-    </main>
-    <footer>
-      <form
-        class="todo-add-container d-flex flex-column"
-        style="visibility: hidden"
-        id="add-task-container"
-      >
-        <div class="todo-add-backgorund" onclick="hideAddContainer()"></div>
-        <input
-          class="todo-form-title"
-          type="text"
-          placeholder="Title"
-          id="new-task-title"
-          maxlength="50"
-        />
-        <textarea
-          class="todo-form-description"
-          name=""
-          id="new-task-description"
-          maxlength="200"
-          type="text"
-          spellcheck="false"
-          placeholder="Description"
-        ></textarea>
-        <button class="todo-create-button" onclick="createTask()">
-          <img
-            class="todo-check-img"
-            src="assets/Images/Check/checked.png"
-            alt=""
+      <section class="" id="todo-list-section">
+        <ul class="todo-record-list" id="todo-list"></ul>
+      </section>
+      <section class="todo-container-add" id="add-task-container">
+        <form class="todo-add" id="add-task">
+          <input
+            class="todo-form-title"
+            type="text"
+            placeholder="Title"
+            id="new-task-title"
+            maxlength="50"
           />
-          <span class="todo-create-text mx-auto">Create</span>
-        </button>
-      </form>
-    </footer>
+          <textarea
+            class="todo-form-description"
+            name=""
+            id="new-task-description"
+            maxlength="200"
+            type="text"
+            spellcheck="false"
+            placeholder="Description"
+          ></textarea>
+          <button class="todo-create-button" onclick="createTask()">
+            <i class="fa-solid fa-check todo-check-img"></i>
+            <span class="todo-create-text mx-auto">Create</span>
+          </button>
+        </form>
+      </section>
+    </div>
     <script src="js/app.js"></script>
     <script src="js/bootstrap.bundle.js"></script>
   </body>
